  * For outgoing PTP redirected calls, you now need to use the inhibit(i)
    option on all of the REDIRECTING statements before dialing the
    redirected-to party.  You still have to set the REDIRECTING(to-xxx,i)
    and the REDIRECTING(from-xxx,i) values.  The PTP call will update the
    redirecting-to presentation (COLR) when it becomes available.

thirdparty mISDN enhancements
-----------------------------
mISDN has been modified by Digium, Inc. to greatly expand facility message
support to allow:
  * Enhanced COLP support for call diversion and transfer.
  * CCBS/CCNR support.

The latest modified mISDN v1.1.x based version is available at:
http://svn.digium.com/svn/thirdparty/mISDN/trunk
http://svn.digium.com/svn/thirdparty/mISDNuser/trunk

Tagged versions of the modified mISDN code are available under:
http://svn.digium.com/svn/thirdparty/mISDN/tags
http://svn.digium.com/svn/thirdparty/mISDNuser/tags

Asterisk Manager Interface
--------------------------
 * The Hangup action now accepts a Cause header which may be used to
   set the channel's hangup cause.
 * sslprivatekey option added to manager.conf and http.conf.  Adds the ability
   to specify a separate .pem file to hold a private key.  By default sslcert
   is used to hold both the public and private key.
 * Options in manager.conf and http.conf with the 'ssl' prefix have been replaced
   for options containing the 'tls' prefix.  For example, 'sslenable' is now
   'tlsenable'.  This has been done in effort to keep ssl and tls options consistent
   across all .conf files. All affected sample.conf files have been modified to
   reflect this change.  Previous options such as 'sslenable' still work,
   but options with the 'tls' prefix are preferred.

Logger
------
 * The rarely used 'event_log' and LOG_EVENT channel have been removed; the few
   users of this channel in the tree have been converted to LOG_NOTICE or removed
   (in cases where the same message was already generated to another channel).
